miniextendr-macros/tests/ui/derive_dataframe_field_expand_vec_no_width.rs
//! Test: expand on Vec<T> without width is rejected.

use miniextendr_macros::DataFrameRow;

#[derive(DataFrameRow)]
struct Foo {
    #[dataframe(expand)]
    scores: Vec<f64>,
}

fn main() {}
